# universal-extractor

./: .gitignore  DELIVERY_REPORT.md  LICENSE  README.md  Scrapling使用感受与踩坑记录.md  pyproject.toml  requirements.txt
UniversalExtractor/: README.md  __init__.py  __main__.py  canvas_hook.py  captcha_solver.py  classifier.py  cli.py  completeness.py  crawler.py  cross_validator.py  demo.py  demo_jd.py  extractor.py  http_client.py  jd_engine.py  mcp_server.py  ocr_providers.py  pipeline.py  proxy_manager.py  rate_limiter.py  screenshot.py  scrolling.py  search.py  session_manager.py  weblens.py
tests/: run_regression.py  test_classifier.py  test_classifier_completeness.py  test_cli.py  test_completeness.py  test_pipeline_integration.py  test_search_verify_extract.py  test_stages.py
