[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "universal-extractor"
version = "0.1.0"
description = "Universal web page text extractor with 6-layer fallback (DOM → API → Canvas Hook → CDP → OCR → Vision LLM)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JXJ"},
]
keywords = [
    "web-scraping", "extraction", "canvas", "ocr", "vision-llm",
    "scrapling", "playwright", "cdp", "content-extraction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://github.com/JXJ/universal-extractor"
Repository = "https://github.com/JXJ/universal-extractor"

# Core dependency
dependencies = [
    "scrapling[all]>=0.4.9",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

# Optional: Vision LLM backends
[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
tesseract = ["pytesseract>=0.3.10"]
all = [
    "universal-extractor[openai,anthropic,tesseract]",
]

[tool.setuptools.packages.find]
include = ["UniversalExtractor*"]

[tool.setuptools.package-dir]
"universal_extractor" = "UniversalExtractor"
